:snake: Adds features to skip final push and/or deleting of fix branch

--- a/config.json
+++ b/config.json
@@ -7,7 +7,9 @@
     "source_branch": "master",
     "source_remote": "source",
     "fix_branch": "fix",
-    "fix_commit": "Fixes logs"
+    "fix_commit": "Fixes logs",
+    "keep_fix_branch": false,
+    "no_push": false
   },
   "repos": [
     {
