--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Collection of guieds and scripts on how to fix Git logs of repositories that
   where not Forked correctly.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://git-utilities.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: S0_And_S0
 github_username:  S0AndS0
 
