--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Git Fix Logs
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Collection of guieds and scripts on how to fix Git logs of repositories that
+  Collection of guides and scripts on how to fix Git logs of repositories that
   where not Forked correctly.
 baseurl: "fix_logs" # the subpath of your site, e.g. /blog
 url: "https://git-utilities.github.io" # the base hostname & protocol for your site, e.g. http://example.com
